<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_30adp">


    <TextView
        android:id="@+id/tv_comment_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5adp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_marginTop="@dimen/_5adp"
        android:id="@+id/tv_comment_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:maxLines="3"
        android:padding="@dimen/_5adp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toStartOf="@+id/img_comment_fav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_comment_name"

        />

    <TextView
        android:id="@+id/tv_commented_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="@dimen/_10asp"
        android:padding="@dimen/_5adp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_comment_detail" />




    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_comment_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favourite"
        app:layout_constraintBottom_toBottomOf="@id/tv_comment_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_comment_name" />



</androidx.constraintlayout.widget.ConstraintLayout>