<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DAC7C7"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PillNameAddingFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/back_toolbar"
            android:layout_width="match_parent"
            app:title="About"
            android:background="#ffffff"
            android:layout_height="?attr/actionBarSize"
            >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/tb_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:textColor="#E42E2E"
                app:layout_constraintTop_toTopOf="@id/img_back"
                app:layout_constraintBottom_toBottomOf="@id/img_back"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/_10adp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:cardCornerRadius="@dimen/_8adp"
        android:layout_margin="@dimen/_18adp"
        android:elevation="@dimen/_8adp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatEditText
                android:padding="@dimen/_8adp"
                android:layout_width="match_parent"
                android:background="@drawable/pill_edit_bg"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/edit_text_pill"
                android:hint="@string/pill_name"/>


            <RelativeLayout
                android:background="#F1EEEE"
                android:padding="@dimen/_5adp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_upper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_text_pill">
                <TextView
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:gravity="start"
                    android:layout_marginStart="@dimen/_3adp"

                    android:text="@string/text"
                    android:textSize="@dimen/_15asp"/>

                <TextView
                    android:id="@+id/tv_pill_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@+id/tvSubmit"
                    android:layout_toEndOf="@+id/btnCancel"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/lorem_ipsum"
                    />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@id/tvSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:gravity="end|center_vertical"
                    android:src="@drawable/go_arrow"

                    />
            </RelativeLayout>


            <View
                android:id="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl_upper"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#aaa" />





            <RelativeLayout
                android:id="@+id/pill_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6DFDF"
                android:padding="5dp"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <TextView
                    android:id="@+id/tv_remider"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:text="@string/reminder_time" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/select"
                    android:textColor="#138C23"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>



            <TimePicker
                android:id="@+id/pill_time_packer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pill_relative_layout" />


        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.cardview.widget.CardView>






</androidx.constraintlayout.widget.ConstraintLayout>