<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#EAE8E8"
    android:padding="@dimen/_5adp"
    android:layout_marginTop="@dimen/_5adp"
    android:layout_marginBottom="@dimen/_5adp"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_image"
        android:layout_width="@dimen/_50adp"
        android:layout_height="@dimen/_50adp"
        android:layout_marginStart="@dimen/_8adp"
        android:layout_marginTop="@dimen/_8adp"
        android:src="@drawable/profile_photo"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profile_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8adp"
        android:maxLines="1"
        android:text="@string/name"
        android:maxWidth="@dimen/_200adp"
        android:textSize="@dimen/_15asp"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="@id/circle_image"
        app:layout_constraintStart_toEndOf="@id/circle_image"
        app:layout_constraintTop_toTopOf="@id/circle_image" />

    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="0dp"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8adp"
        android:maxLines="1"
        android:text="@string/day_date"
        app:layout_constraintBottom_toBottomOf="@id/profile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/profile_name"
        app:layout_constraintTop_toTopOf="@id/profile_name" />

    <TextView

        android:id="@+id/tv_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8adp"
        android:layout_marginTop="@dimen/_5adp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/lorem_ipsum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/circle_image" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8adp"
        android:elevation="@dimen/_12adp"
        app:cardCornerRadius="@dimen/_8adp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_post">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/_5adp"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_news"
                android:layout_width="@dimen/_80adp"
                android:layout_height="@dimen/_60adp"
                android:src="@drawable/kin_jone_an"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="img_news" />

            <TextView
                android:id="@+id/tv_news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4adp"
                android:maxLines="2"
                android:text="@string/lorem_ipsum"
                android:maxWidth="@dimen/_200adp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_post_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4adp"
                android:layout_marginTop="@dimen/_5adp"
                android:maxLines="2"
                android:maxWidth="@dimen/_200adp"
                android:text="@string/lorem_ipsum"
                app:layout_constraintStart_toStartOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/tv_news_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_fav"
        android:layout_width="@dimen/_25adp"
        android:layout_height="@dimen/_25adp"
        android:layout_marginStart="@dimen/_8adp"
        android:layout_marginTop="@dimen/_15adp"
        android:src="@drawable/favourite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />


    <TextView
        android:id="@+id/tv_fav_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="@+id/img_fav"
        app:layout_constraintStart_toEndOf="@+id/img_fav"
        app:layout_constraintTop_toTopOf="@+id/img_fav" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_share"
        android:layout_width="@dimen/_20adp"
        android:layout_height="@dimen/_20adp"
        android:src="@drawable/share"
        android:layout_marginStart="@dimen/_15adp"
        app:layout_constraintBottom_toBottomOf="@+id/img_fav"
        app:layout_constraintStart_toEndOf="@+id/tv_fav_count"
        app:layout_constraintTop_toTopOf="@+id/img_fav" />


    <TextView
        android:id="@+id/tv_share_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/count"
        app:layout_constraintBottom_toBottomOf="@+id/img_share"
        app:layout_constraintStart_toEndOf="@+id/img_share"
        app:layout_constraintTop_toTopOf="@+id/img_share" />


</androidx.constraintlayout.widget.ConstraintLayout>